updated the firstSection with the absolute and used the aspect for aligning the image correctly

--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,10 @@
 body{
   margin: 0;
   padding: 0;
+  min-width: 300px;
   height: 100vh;
 }
-
+  
 
 .finger-gradient{
   background: linear-gradient(180deg,#6272C5,#8160B6);
